# sframe

./: README.md
example/: CMakeLists.txt  Makefile
example/client/: CMakeLists.txt  Client.cpp  Client.h  ClientConfig.cpp  ClientConfig.h  ClientManager.cpp  ClientManager.h  ConfigManager.cpp  ConfigManager.h  ConfigType.h  Makefile  main.cpp
example/server/: CMakeLists.txt  Makefile  main.cpp
example/server/config/: CMakeLists.txt  ServerConfig.cpp  ServerConfig.h  ServiceDef.h
example/server/gateservice/: CMakeLists.txt  ClientManager.cpp  ClientManager.h  ClientSession.cpp  ClientSession.h  GateService.cpp  GateService.h
example/server/httpservice/: CMakeLists.txt  HttpService.cpp  HttpService.h  HttpSession.cpp  HttpSession.h
example/server/ssproto/: CMakeLists.txt  SSMsg.cpp  SSMsg.h
example/server/workservice/: CMakeLists.txt  User.cpp  User.h  WorkService.cpp  WorkService.h
make/: global-config.mk  real.make
sframe/: CMakeLists.txt  Makefile
sframe/conf/: ConfigDef.h  ConfigLoader.h  ConfigMeta.h  ConfigSet.cpp  ConfigSet.h  ConfigStringParser.h  JsonLoader.h  JsonReader.h  Table.cpp  Table.h  TableLoader.h  TableReader.h  csv.cpp  csv.h
sframe/net/: Error.h  IoService.h  SendBuffer.cpp  SendBuffer.h  SocketAddr.cpp  SocketAddr.h  TcpAcceptor.h  TcpSocket.h  net.h
sframe/net/linux/: IoService_Linux.cpp  IoService_Linux.h  IoUnit.h  TcpAcceptor_Linux.cpp  TcpAcceptor_Linux.h  TcpSocket_Linux.cpp  TcpSocket_Linux.h
sframe/net/win/: Initialize.cpp  Initialize.h  IoService_Win.cpp  IoService_Win.h  IoUnit.h  TcpAcceptor_Win.cpp  TcpAcceptor_Win.h  TcpSocket_Win.cpp  TcpSocket_Win.h
sframe/serv/: AdminCmd.cpp  AdminCmd.h  Listener.cpp  Listener.h  Message.h  MessageDecoder.h  ProxyService.cpp  ProxyService.h  ProxyServiceMsg.h  Service.cpp  Service.h  ServiceDispatcher.cpp  ServiceDispatcher.h  ServiceListener.cpp  ServiceListener.h  ServiceSession.cpp  ServiceSession.h
sframe/util/: BitPanel.h  BlockingQueue.h  Buffer.h  ConditionVariable.h  Convert.h  Delegate.h  DynamicFactory.h  Error.cpp  Error.h  FileHelper.cpp  FileHelper.h  Http.cpp  Http.h  Lock.h  Log.cpp  Log.h  ObjectFactory.cpp  ObjectFactory.h  ObjectPool.cpp  ObjectPool.h  RandomHelper.cpp  RandomHelper.h  RingQueue.h  Serialization.cpp  Serialization.h  ShmChunk.cpp  ShmChunk.h  Singleton.h  StringHelper.cpp  StringHelper.h  TimeHelper.h  Timer.cpp  Timer.h  TupleHelper.h  WordFilter.cpp  WordFilter.h  json11.cpp  md5.cpp  md5.h
vs2015/: vs2015.sln
vs2015/client/: client.vcxproj  client.vcxproj.filters
vs2015/server/: server.vcxproj  server.vcxproj.filters
vs2015/sframe/: sframe.vcxproj  sframe.vcxproj.filters
